fix overflow content bug

--- a/app/assets/stylesheets/style.scss
+++ b/app/assets/stylesheets/style.scss
@@ -82,6 +82,7 @@ Primary style
   }
   @media only screen and (min-width: 1170px) {
 	.cd-main-content .content-wrapper {
+		padding: 65px 5% 3em;
 	  margin-left: 200px;
 	}
 	.cd-main-content::before {
